<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgotPassword"
            type="com.envirocleanadmin.ui.activity.ForgetPasswordActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:focusable="false"
        android:focusableInTouchMode="true"
        tools:context=".ui.activity.ForgotPasswordActivity">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/app_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPwdTitle"
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_forgot_password_"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFrgtPwd"
                style="@style/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:textColor="@color/Black_title"
                android:text="@string/lbl_forgot_desc"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPwdTitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmailPhone"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/single_bottom_edit_text"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/tvFrgtPwd" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                style="@style/blueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/blue_solid_rounded"
                android:text="@string/lbl_send"
                android:textAllCaps="false"
                android:onClick="@{()->forgotPassword.onSendClick()}"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/edtEmailPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>