<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_border"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_18sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAreaName"
                style="@style/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/border_edittext"
                android:hint="@string/enter_area_name"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/Black_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRadius"
                style="@style/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/radius"
                android:textColor="@color/Black_title"
                app:layout_constraintStart_toStartOf="@id/etAreaName"
                app:layout_constraintTop_toBottomOf="@id/etAreaName" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarKm"
                android:progressTint="@color/pantone_072"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:thumbTint="@color/pantone_072"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/etAreaName"
                app:layout_constraintStart_toStartOf="@id/etAreaName"
                app:layout_constraintTop_toBottomOf="@id/tvRadius" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMinLimit"
                style="@style/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="0 Meter"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/Black_title"
                app:layout_constraintStart_toStartOf="@id/etAreaName"
                app:layout_constraintTop_toBottomOf="@id/seekBarKm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMaxLimit"
                style="@style/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:text="25 Meter"
                android:textColor="@color/Black_title"
                app:layout_constraintEnd_toEndOf="@id/etAreaName"
                app:layout_constraintTop_toBottomOf="@id/seekBarKm" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_80sdp"
                android:layout_marginEnd="@dimen/_80sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/poppins_semi_bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_button"
                app:layout_constraintTop_toBottomOf="@id/tvMinLimit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>